Fixed align vertical to open account link in features.

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -160,6 +160,8 @@ div#features h2 {
 
 div#features a.account {
 	.account-link(@color_gold, @color_white);
+	display: inline-block;
+	vertical-align: middle;
 }
 
 div#features ul {
